# hermescube

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PURPOSE.md  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_agent_memory.py  bench_har.py  real_use_bench.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASSESSMENT.md  CUBE_VS_HERMES_AGENT.md  DAY_TO_DAY.md  ENGRAM_NET.md  FRAMEWORK.md  IDEAS_FROM_OPS.md  LIVING_ARCHIVE.md  REAL_USE_BENCH.md  SPEC.md  USER_GUIDE.md
hermescube/: __init__.py  __main__.py  bio_rank.py  cli.py  colony.py  conflict.py  consent.py  cube.py  dense.py  embed.py  engram_net.py  har.py  hrr.py  journey.py  living.py  mirror.py  peer_card.py  procedure.py  prospective.py  provider.py  session_digest.py  sleep_replay.py  space_bridge.py  threats.py  trajectory.py  wisdom.py  yield_trail.py
hermescube/framework/: __init__.py  (+4 more)
plugin/: __init__.py  cli.py  plugin.yaml
scripts/: check_isolation.sh  dogfood_use.py  firsthand_session.py  functional_standup.py  install_hermes.sh  labeled_ir_bench.py  update.sh
tests/: test_bio_rank.py  test_cli.py  test_colony.py  test_cube.py  test_day_to_day.py  test_dense.py  test_embed.py  test_engram_net.py  test_framework.py  test_har.py  test_hrr.py  test_hygiene.py  test_inject_hygiene.py  test_journey.py  test_living.py  test_mirror.py  test_nous_gaps.py  test_persistence.py  test_procedure.py  test_prospective.py  test_provider.py  test_sleep_replay.py  test_space_bridge.py  test_trajectory.py  test_wisdom.py  test_yield_trail.py
