[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermescube"
version = "0.3.7"
description = "Binary columnar archive with holographic associative retrieval for persistent agent memory"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.optional-dependencies]
numpy = ["numpy>=1.24,<2"]
dev = ["numpy>=1.24,<2", "pytest>=7.0,<9", "pytest-cov>=4.0,<6", "pyright>=1.1,<2", "pyyaml>=6.0"]

[project.scripts]
hermescube = "hermescube.cli:main"

[tool.setuptools.packages.find]
include = ["hermescube*"]

[tool.pyright]
include = ["hermescube"]
typeCheckingMode = "basic"
reportOptionalMemberAccess = false
reportInvalidTypeForm = false
reportPossiblyUnboundVariable = false
reportMissingImports = false

# These suppress errors for optional imports only available inside
# the HermesAgent environment (hermes_constants, plugins.memory.query_rewrite).
# All such imports are wrapped in try/except blocks.

[tool.coverage.run]
omit = ["hermescube/__main__.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
